# microcrm

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Makefile  PROMPT_TEMPLATE.md  README.md  RELEASE_NOTES.md  cli.py  compose.dev.yaml  compose.local.yaml  compose.prod.yaml  entrypoint.sh  local_wizard.sh  prod_wizard.sh  pyproject.toml
.do/: README.md  cloud-init.yaml
.github/workflows/: build.yaml  publish.yaml  test.yaml
src/: conftest.py  manage.py
src/crm/: api.py  asgi.py  celery.py  dashboard.py  settings.py  urls.py  wsgi.py
src/leads/: admin.py  controllers.py  gmail.py  models.py  schema.py  service.py  tasks.py
src/leads/management/commands/: bootstrap.py  seed.py
src/leads/migrations/: 0001_initial.py  0002_leadtype_tag_historicallead_last_contact_and_more.py  0003_load_initial_data.py  0004_city_leads_city_name_city_leads_city_country_and_more.py  0005_researchpromptconfig_researchjob.py  0006_add_poll_research_periodic_task.py  0007_alter_researchpromptconfig_prompt_template.py  0008_researchjob_raw_result_and_more.py  0009_lead_leads_lead_email_lead_leads_lead_phone_and_more.py  0010_remove_lead_leads_lead_city_and_more.py  0011_add_not_started_status.py  0012_historicalaction_action.py  0013_alter_action_options_action_leads_action_created_at.py  0014_migrate_lead_actions_to_action_model.py  0015_rename_action_description_to_name_add_notes.py  0016_remove_next_action_fields_from_lead.py  0017_add_email_template_and_email_sent.py  0018_emailtemplate_language_and_more.py  0019_historicalemaildraft_emaildraft.py  0020_alter_emaildraft_from_email_and_more.py  0021_emailsent_sent_by_gmailconnection.py  0022_emailsignature.py  0023_contact.py  0024_backfill_primary_contact.py  0025_emaildraft_emailsent_contact_fk.py
src/leads/static/leads/js/: chained_filters.js
src/leads/templates/admin/leads/lead/: change_list.html
src/leads/tests/: conftest.py  test_admin.py  test_contact.py  test_controllers.py  test_gmail.py  test_service.py  test_tasks.py
src/templates/admin/: index.html
src/templates/admin/leads/emaildraft/: change_form.html
src/templates/admin/leads/emailsignature/: change_form.html
src/templates/admin/leads/emailtemplate/: change_form.html
src/templates/admin/leads/lead/: send_email.html
